<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    tools:context=".ui.splash.SplashActivity">


    <WebView
        android:id="@+id/web_view"
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_cleaner_icon"
        android:layout_width="148dp"
        android:layout_height="148dp"
        android:layout_marginTop="@dimen/margin_top_182dp"
        android:src="@drawable/main_icon"
        app:cardCornerRadius="@dimen/dp_2.25x"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_cleaner_icon"
            android:layout_width="148dp"
            android:layout_height="148dp"
            android:src="@drawable/main_icon" />
    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_1.75x"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_cleaner_icon">

        <TextView
            android:id="@+id/tv_title_lite"
            style="@style/TextStyle.Title.FirstPart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_1.75x"
            android:text="@string/lite"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_title_cleaner_2.0"
            style="@style/TextStyle.Title.SecondPart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_1x"
            android:text="@string/cleaner_2_0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_privacy_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="165dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/constraintLayout">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_privacy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_privacy_title_first_part"
                style="@style/TextStyle.Content.FirstPart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/by_clicking_continue_i_give_my_consent_to"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_privacy_title_second_part"
                style="@style/TextStyle.Content.SecondPart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/privacy_policy"
                app:layout_constraintStart_toStartOf="@+id/tv_privacy_title_first_part"
                app:layout_constraintTop_toBottomOf="@+id/tv_privacy_title_first_part" />

            <TextView
                android:id="@+id/tv_privacy_title_third_part"
                style="@style/TextStyle.Content.FirstPart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_0.25x"
                android:text="@string/and"
                app:layout_constraintStart_toEndOf="@+id/tv_privacy_title_second_part"
                app:layout_constraintTop_toBottomOf="@+id/tv_privacy_title_first_part" />

            <TextView
                android:id="@+id/tv_privacy_title_fourth_part"
                style="@style/TextStyle.Content.SecondPart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_0.25x"
                android:text="@string/terms_and_conditions"
                app:layout_constraintStart_toEndOf="@id/tv_privacy_title_third_part"
                app:layout_constraintTop_toBottomOf="@+id/tv_privacy_title_first_part" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <Button
            android:id="@+id/btn_continue"
            style="@style/ButtonStyle.Blue"
            android:layout_width="@dimen/btn_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_2.25x"
            android:text="@string/continue_string"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cl_privacy" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="186dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/constraintLayout">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottie_anim"
            android:layout_width="150dp"
            android:layout_height="80dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/splash" />

        <TextView
            android:id="@+id/tv_loading_content"
            style="@style/TextStyle.Content.Loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/application_initialization_in_progress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lottie_anim" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>